fixed spacing issue on title for large screens

--- a/client/src/styles/Title.css
+++ b/client/src/styles/Title.css
@@ -38,4 +38,7 @@ hr {
     .main-title {
         font-size: 1.5rem;
     }
+    .title {
+        margin-left: 1.5em;
+    }
 }
